fixes bug where it allows auto scrolling when overflow is set

--- a/ui/scrollview.info/sample/ui/main.reel/main.css
+++ b/ui/scrollview.info/sample/ui/main.reel/main.css
@@ -45,7 +45,7 @@ body {
 .box {
     display: inline-block;
     width: 20em;
-    height: 5em;
+    height: 2000px;
     background: pink;
 }
 
